package Ejercicio2;

public interface UserStorage {
    String getPassword(String username);
}
